--- a/styles/_products.scss
+++ b/styles/_products.scss
@@ -1,8 +1,5 @@
 .products {
-  //max-width: 100%;
-
-
   &__list {
-    //max-width: 50%;
+    padding: 70px 0 50px;
   }
 }
