--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,7 +1,23 @@
 html,
 body {
   max-width: 100vw;
-  //overflow-x: hidden;
+  overflow-x: hidden;
+}
+
+*::-webkit-scrollbar {
+  height: 11px;
+  width: 11px;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: #D7DFE2;
+  border-radius: 12px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #b0b3b5;
+  border-radius: 12px;
+  border: 1px solid #D7DFE2;
 }
 
 *, h1, h2, h3, h4, h5, h6, p {
